# slangOld

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile
include/slang/: Expression.hpp  Interpreter.hpp  Lexer.hpp  Parser.hpp
include/slang/Expression/: Atom.hpp  Base.hpp  Collection.hpp  Number.hpp  Str.hpp  Type.hpp
src/: main.cpp
src/slang/: Interpreter.cpp  Lexer.cpp  Parser.cpp
